tests/semantic/invalid/function_parameter_name_mismatch.c
/*
 * Multi-line comment.
 */

void foo(int8_t a, char c);

void foo(int8_t a, char d)
{
    return;
}
